crates/domain/tests/snapshots/rate_golden__atm_4m2_premium_location.snap
---
source: crates/domain/tests/rate_golden.rs
expression: calc
---
{
  "inputs": {
    "mrp": "4000",
    "area_m2": "4",
    "factors": {
      "kt": {
        "option_code": "case",
        "value": "2.0"
      },
      "kk": {
        "option_code": "case",
        "value": "1.1"
      },
      "ksk": {
        "option_code": "case",
        "value": "1"
      },
      "kr": {
        "option_code": "case",
        "value": "1.5"
      },
      "kvd": {
        "option_code": "case",
        "value": "1.3"
      },
      "kopf": {
        "option_code": "case",
        "value": "1"
      },
      "kfu": {
        "option_code": "case",
        "value": "1"
      },
      "ksots": {
        "option_code": "case",
        "value": "1"
      },
      "k": {
        "option_code": "case",
        "value": "1"
      },
      "kn": {
        "option_code": "case",
        "value": "1"
      },
      "kv": {
        "option_code": "case",
        "value": "1"
      }
    }
  },
  "base_rate_rbs": "6000.0",
  "multiplier": "4.2900",
  "annual_raw": "102960.00000",
  "annual": "102960",
  "monthly": "8580",
  "guarantee_fee": "8580",
  "vat_included": false
}
