crates/domain/tests/snapshots/rate_golden__decimal_area_and_kv.snap
---
source: crates/domain/tests/rate_golden.rs
expression: calc
---
{
  "inputs": {
    "mrp": "4000",
    "area_m2": "42.75",
    "factors": {
      "kt": {
        "option_code": "case",
        "value": "1"
      },
      "kk": {
        "option_code": "case",
        "value": "1"
      },
      "ksk": {
        "option_code": "case",
        "value": "1"
      },
      "kr": {
        "option_code": "case",
        "value": "1"
      },
      "kvd": {
        "option_code": "case",
        "value": "1"
      },
      "kopf": {
        "option_code": "case",
        "value": "1"
      },
      "kfu": {
        "option_code": "case",
        "value": "1"
      },
      "ksots": {
        "option_code": "case",
        "value": "1"
      },
      "k": {
        "option_code": "case",
        "value": "1"
      },
      "kn": {
        "option_code": "case",
        "value": "1"
      },
      "kv": {
        "option_code": "case",
        "value": "1.25"
      }
    }
  },
  "base_rate_rbs": "6000.0",
  "multiplier": "0.8",
  "annual_raw": "205200.0000",
  "annual": "205200",
  "monthly": "17100",
  "guarantee_fee": "17100",
  "vat_included": false
}
