crates/domain/tests/snapshots/rate_golden__kv_divisor_two.snap
---
source: crates/domain/tests/rate_golden.rs
expression: calc
---
{
  "inputs": {
    "mrp": "4000",
    "area_m2": "42",
    "factors": {
      "kt": {
        "option_code": "case",
        "value": "1"
      },
      "kk": {
        "option_code": "case",
        "value": "1"
      },
      "ksk": {
        "option_code": "case",
        "value": "1"
      },
      "kr": {
        "option_code": "case",
        "value": "1"
      },
      "kvd": {
        "option_code": "case",
        "value": "1"
      },
      "kopf": {
        "option_code": "case",
        "value": "1"
      },
      "kfu": {
        "option_code": "case",
        "value": "1"
      },
      "ksots": {
        "option_code": "case",
        "value": "1"
      },
      "k": {
        "option_code": "case",
        "value": "1"
      },
      "kn": {
        "option_code": "case",
        "value": "1"
      },
      "kv": {
        "option_code": "case",
        "value": "2"
      }
    }
  },
  "base_rate_rbs": "6000.0",
  "multiplier": "0.50",
  "annual_raw": "126000.000",
  "annual": "126000",
  "monthly": "10500",
  "guarantee_fee": "10500",
  "vat_included": false
}
