crates/domain/tests/snapshots/rate_golden__rounding_tiyn_down.snap
---
source: crates/domain/tests/rate_golden.rs
expression: calc
---
{
  "inputs": {
    "mrp": "99.92",
    "area_m2": "1",
    "factors": {
      "kt": {
        "option_code": "case",
        "value": "1"
      },
      "kk": {
        "option_code": "case",
        "value": "1"
      },
      "ksk": {
        "option_code": "case",
        "value": "1"
      },
      "kr": {
        "option_code": "case",
        "value": "1"
      },
      "kvd": {
        "option_code": "case",
        "value": "1"
      },
      "kopf": {
        "option_code": "case",
        "value": "1"
      },
      "kfu": {
        "option_code": "case",
        "value": "1"
      },
      "ksots": {
        "option_code": "case",
        "value": "1"
      },
      "k": {
        "option_code": "case",
        "value": "1"
      },
      "kn": {
        "option_code": "case",
        "value": "1"
      },
      "kv": {
        "option_code": "case",
        "value": "1"
      }
    }
  },
  "base_rate_rbs": "149.880",
  "multiplier": "1",
  "annual_raw": "149.880",
  "annual": "150",
  "monthly": "12",
  "guarantee_fee": "12",
  "vat_included": false
}
